# learn-haskell

./: README.md
app/: Main.hs
haskell-practice/: README.md  haskell-practice.cabal  stack.yaml
haskell-practice/app/: Main.hs
haskell-practice/src/: ExistentiallyQuantifiedTypes.hs  LEither.hs  Lib.hs  Misc.hs  Monad.hs  REither.hs  UseCoercible.hs  UseMin.hs  UseReaderMonad.hs  UseStateMonad.hs  UseWriterMonad.hs
haskell-practice/src/IntroductionToHaskell/: Lottery.hs  UseExcept.hs  UseMonadTransformer.hs  UseReader.hs
src/: UseCoercible.hs  UseStateMonad.hs
src/IntroductionToHaskell/: UseST.hs
src/ProgrammingH/: Parser.hs
src/SugoiH/: Stack.hs
